[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoagentx"
version = "0.2.0-medical"
description = "Self-Evolving Medical AI Agent Framework — PubMed + ClinicalTrials + FDA + EvoX Evolution"
readme = "README-medical.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EvoAgentX Team", email = "evoagentx.ai@gmail.com"},
    {name = "MoKangMedical", email = "mokangmedical@users.noreply.github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
keywords = ["ai-agent", "medical-ai", "self-evolving", "pubmed", "clinical-trials", "drug-safety", "evoagentx", "llm"]

dependencies = [
    "overdue",
    "tenacity",
    "networkx>=3.3",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pydantic>=2.9.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.1",
    "requests>=2.28.0",
    "openai>=1.55.3",
    "litellm>=1.55.6",
    "dashscope>=1.23.4",
    "tree_sitter",
    "tree_sitter_python",
    "antlr4-python3-runtime==4.11",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-subtests",
    "pytest-json-report",
    "ruff"
]
server = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "motor>=3.7.0",
    "sqlalchemy>=2.0.38",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.1",
    "celery>=5.3.4",
    "redis>=5.0.0",
    "asgi-lifespan>=1.0.1",
    "jwt>=1.3.1"
]
rag = [
    "llama-index",
    "llama-index-vector-stores-faiss",
    "llama-index-graph-stores-neo4j",
    "faiss-cpu>=1.8.0",
    "sentence-transformers",
    "neo4j",
    "ollama"
]
tools = [
    "docker>=6.1.2",
    "googlesearch-python",
    "wikipedia",
    "mcp",
    "beautifulsoup4",
    "selenium",
    "html2text",
    "fastmcp>=2.2.0,<3.0",
    "PyPDF2",
    "docx2txt",
    "python-pptx",
    "Pillow",
    "exa-py>=2.0.0"
]
medical = [
    # Medical tools work with zero external deps (urllib only)
    # This extras group adds optional enhancements
    "biopython>=1.80",       # Enhanced PubMed parsing
    "pandas>=2.2.3",         # Data analysis
    "matplotlib>=3.10.0",    # Visualization
]
multimodal = [
    "colpali-engine==0.3.9",
    "torch",
    "transformers>=4.50.0,<4.51.0",
    "datasets>=3.4.0",
    "voyageai"
]
optimizers = [
    "textgrad>=0.1.8",
    "dspy"
]
benchmarks = [
    "sympy",
    "scipy",
    "nltk>=3.9.1"
]
viz = [
    "matplotlib>=3.10.0"
]
all = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "motor>=3.7.0",
    "sqlalchemy>=2.0.38",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.1",
    "celery>=5.3.4",
    "redis>=5.0.0",
    "asgi-lifespan>=1.0.1",
    "jwt>=1.3.1",
    "llama-index",
    "llama-index-vector-stores-faiss",
    "llama-index-graph-stores-neo4j",
    "faiss-cpu>=1.8.0",
    "sentence-transformers",
    "neo4j",
    "ollama",
    "docker>=6.1.2",
    "googlesearch-python",
    "wikipedia",
    "mcp",
    "beautifulsoup4",
    "selenium",
    "html2text",
    "fastmcp>=2.2.0,<3.0",
    "PyPDF2",
    "docx2txt",
    "python-pptx",
    "Pillow",
    "colpali-engine==0.3.9",
    "torch",
    "transformers>=4.50.0,<4.51.0",
    "datasets>=3.4.0",
    "voyageai",
    "textgrad>=0.1.8",
    "dspy",
    "sympy",
    "scipy",
    "nltk>=3.9.1",
    "matplotlib>=3.10.0",
    "exa-py>=2.0.0",
    "biopython>=1.80"
]

[project.scripts]
evoagentx = "evoagentx.cli:main"

[project.urls]
Homepage = "https://github.com/MoKangMedical/EvoAgentX"
Documentation = "https://github.com/MoKangMedical/EvoAgentX#readme"
Repository = "https://github.com/MoKangMedical/EvoAgentX"
"Bug Tracker" = "https://github.com/MoKangMedical/EvoAgentX/issues"
Changelog = "https://github.com/MoKangMedical/EvoAgentX/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (not always clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["evoagentx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
